--- a/main.html
+++ b/main.html
@@ -45,6 +45,40 @@
                 </div>
             </div>
         </nav>
+        <div>
+            <section class="hero is-medium is-link">
+                <div class="hero-body">
+                  <p class="title">
+                    Coopenoix, entreprise crée depuis 1929
+                  </p>
+                  <p class="subtitle">
+                    Coopérative de producteur de noix.
+                  </p>
+                </div>
+            </section>
+        </div>
+        <div>
+            <div class="tile is-ancestor">
+                <div class="tile is-4 is-vertical is-parent">
+                  <div class="tile is-child box">
+                    <p class="title">Efficacité</p>
+                    <p>Notre entreprise se porte garant blabla bla</p>
+                  </div>
+                  <div class="tile is-child box">
+                    <p class="title">Livraison accélérée</p>
+                    <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Proin ornare magna eros, eu pellentesque tortor vestibulum ut. Maecenas non massa sem. Etiam finibus odio quis feugiat facilisis.</p>
+                  </div>
+                </div>
+                <div class="tile is-parent">
+                  <div class="tile is-child box">
+                    <p class="title">Production responsable</p>
+                    <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Etiam semper diam at erat pulvinar, at pulvinar felis blandit. Vestibulum volutpat tellus diam, consequat gravida libero rhoncus ut. Morbi maximus, leo sit amet vehicula eleifend, nunc dui porta orci, quis semper odio felis ut quam.</p>
+                    <p>Suspendisse varius ligula in molestie lacinia. Maecenas varius eget ligula a sagittis. Pellentesque interdum, nisl nec interdum maximus, augue diam porttitor lorem, et sollicitudin felis neque sit amet erat. Maecenas imperdiet felis nisi, fringilla luctus felis hendrerit sit amet. Aenean vitae gravida diam, finibus dignissim turpis. Sed eget varius ligula, at volutpat tortor.</p>
+                    <p>Integer sollicitudin, tortor a mattis commodo, velit urna rhoncus erat, vitae congue lectus dolor consequat libero. Donec leo ligula, maximus et pellentesque sed, gravida a metus. Cras ullamcorper a nunc ac porta. Aliquam ut aliquet lacus, quis faucibus libero. Quisque non semper leo.</p>
+                  </div>
+                </div>
+              </div>
+        </div>
     </div>
 </body>
 </html>
