--- a/main.html
+++ b/main.html
@@ -5,6 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Website coopenoix</title>
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bulma@0.9.4/css/bulma.min.css">
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
 </head>
 <body>
     <div>
@@ -31,11 +32,8 @@
                     <div class="navbar-item">
                         <div class="field is-grouped">
                             <p class="control">
-                                <a class="bd-tw-button button">
-                                    <span class="icon">
-                                        <i class="fas fa-sign-in-alt"></i>
-                                    </span>
-                                    <span href="commandes.html">
+                                <a class="bd-tw-button button is-link" href="commandes.html">
+                                    <span>
                                         Voir les commandes en cours
                                     </span>
                                 </a>
@@ -46,17 +44,32 @@
             </div>
         </nav>
         <div>
-            <section class="hero is-medium is-link">
+            <section class="hero is-medium is-success">
                 <div class="hero-body">
-                  <p class="title">
-                    Coopenoix, entreprise crée depuis 1929
-                  </p>
-                  <p class="subtitle">
-                    Coopérative de producteur de noix.
-                  </p>
+                    <nav class="level is-mobile">
+                        <div class="level-item has-text-centered">
+                          <div>
+                            <figure class="image is-128x128">
+                                <img src="https://assets.stickpng.com/images/580b57fcd9996e24bc43c1db.png">
+                            </figure>
+                          </div>
+                        </div>
+                        <div class="level-item has-text-centered">
+                          <div>
+                            <p class="title">
+                                Coopenoix, entreprise crée depuis 1929
+                            </p>
+                            <div class="block"></div>
+                            <p class="subtitle">
+                                Coopérative de producteur de noix.
+                            </p>
+                          </div>
+                        </div>
+                    </nav>
                 </div>
             </section>
         </div>
+        <div class="block"></div>
         <div>
             <div class="tile is-ancestor">
                 <div class="tile is-4 is-vertical is-parent">
