--- a/commandes.html
+++ b/commandes.html
@@ -33,7 +33,7 @@
                             <p class="control">
                                 <a class="bd-tw-button button is-link" href="commandes.html">
                                     <span>
-                                        Voir les commandes en cours
+                                        Voir les commandes en cour
                                     </span>
                                 </a>
                             </p>
