--- a/main.html
+++ b/main.html
@@ -9,6 +9,8 @@
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Bitter&family=Italiana&display=swap" rel="stylesheet">
+
+    <link rel="stylesheet" type="text/css" href="./style.css">
 </head>
 <body>
     <div>
@@ -35,7 +37,7 @@
                     <div class="navbar-item">
                         <div class="field is-grouped">
                             <p class="control">
-                                <a class="bd-tw-button button is-success" href="commandes.html">
+                                <a class="bd-tw-button button is-success" href="main.html">
                                     <span>
                                         Page d'accueil
                                     </span>
@@ -111,26 +113,5 @@
             </p>
         </div>
     </div>
-
-    <style>
-        p {
-            
-            font-family: Bitter;
-        }
-
-        #fadeAnimation {
-            animation-name: fade;
-            animation-duration: 7s;
-            animation-iteration-count: infinite;
-            transition: ease;
-        }
-
-        @keyframes fade {
-            0%   {background-color: #7D6E83;}
-            25%  {background-color: #D0B8A8;}
-            50%  {background-color: #DFD3C3;}
-            100% {background-color: #F8EDE3;}
-        }
-    </style>
 </body>
 </html>
